index modificado en la rama principal

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>sudfhiashfu</p>
     <form action="">
         <input type="text">
+        <input type="password">
     </form>
 </body>
 </html>
