index modificado en la rama principal

--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <title>Sergio Git</title>
 </head>
 <body>
-    <h1>hola</h1>
-    <p>Git</p>
-    <p>sudfhiashfu</p>
+    <h1>Modificado</h1>
     <form action="">
         <input type="text">
         <input type="password">
     </form>
+    <h5>Hola Conflicto al canto</h5>
 </body>
 </html>
