Conflicto index modificado

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Sergio Git</title>
 </head>
 <body>
-    <h1>Modificado</h1>
     <form action="">
         <input type="text">
         <input type="password">
+        <input type="image">
     </form>
-    <h5>Hola Conflicto al canto</h5>
+    <h5> index conflicto modificado</h5>
 </body>
 </html>
