Coflicto index cambaido

--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Pagina Principal</title>
+    <title>Pagina de Sergio Galván</title>
 </head>
 <body>
-    <h1>Hola soy sergio</h1>
-
+    <h2>Pagina Conflicto</h2>
     <input type="email">
+    <input type="password">
 
-    <h5>Fin pagina master</h5>
 </body>
 </html>
