--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Pagina Principal</title>
+    <title>Mi  Principal</title>
 </head>
 <body>
     <h1>Hola soy sergio</h1>
-
+    <h2>Forriols</h2>
     <input type="email">
 
     <h5>Fin pagina master</h5>
