Cambios desde VSC

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina de Sergio Galván</title>
+    <title>Página de Sergio Galván</title>
 </head>
 <body>
     <h1>Hola soy sergio</h1>
-    <h2>Forriols</h2>
+    <h2>Galvan Forriols</h2>
     <input type="email">
     <input type="password">
 
