Changed the input fields from email and password to text and password. (generated by blackbox.ai )

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 </head>
 <body>
     <h1>Hola soy sergio</h1>
-    <h2>Galvan Forriols</h2>
-    <input type="email">
-    <input type="password">
-
+    <h2>Galvan Forriols</h2>   
+    <form>
+        <input type="password">
+        <input type="text">
+    </form>
 </body>
 </html>
