Cambios desde GitHub

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <h1>Hola soy sergio</h1>
     <h2>Galvan Forriols</h2>   
     <form>
-        <input type="password">
+        <input type="checkbox">
         <input type="text">
+        <input type="password">
     </form>
 </body>
 </html>
